# coderly

./: .gitignore  .gitmodules  bit_stuffing.py  character_stuffing.py  checksum.py  configuration.nix  content  crc.py  dwdm_exp_6.kf  e78.html  go_back_n.py  hamming_code.py  home.nix  leaky_bucket.py  nix.conf  p1.c  selective_repeat.py  stop_and_wait.py
.github/workflows/: list-file-names.yml
cd/: cd1.c  cd13.c  cd14  cd14.c  cd14_output.txt  cd3.c  cd4.cpp  cd4_input.txt  cd5  cd5.c  cd7  cd7.cpp  cd8.c  cd9  cd9.c  input.txt  lex.yy.c  lexp  lexp.l  p1  p1.c  p12.l  p12.y  p13.c  p3  p3.c  p4  p4.cpp  p5.c  p6  p6.c  p7.cpp  p8  p8.c  p9.c  run.sh  run_lex_gcc.sh  temp  tokens.c  var.c  (+1 more)
cd/cd/: p6.c
cd/p11_folder/: p11  p11.l  p11.tab.c  p11.tab.h  p11.y
cd/p14_folder/: p14.c
cd/test/: p1.c  tokens.c
cns/: BlowfishCipher.java  Ceaser.java  Des.java  HillCipher.java  P10_sha1.java  P3a_ceaser.java  P3b_substituition.java  P3c_hillcipher.java  P4_des.java  P5_blowfishcipher.java  P6_rijndaelaes.java  P7_blowfishencryption.java  P8_rsa.java  RijndaelAES.java  Substituition.java  p2.c  p9.html
mean/e1/: 1abc.html  1de.html  about.html  (+1 more)
mean_workshop/: prac1.html  prac1.js
ml/: Exp10_SimpleNaiveBayes.java  exp12.ipynb  exp13.ipynb  exp15.ipynb  exp2.ipynb  exp3.ipynb  exp4c.ipynb  exp4c2.ipynb  exp6.ipynb  exp9.ipynb  knn.ipynb  knn_visualization.ipynb.ipynb  p1.ipynb  p11.ipynb  p11.py  p12.ipynb  p14.ipynb  p15.ipynb  p2.ipynb  p3.ipynb  p4c.ipynb  p5.ipynb  p6.ipynb  p7.ipynb  p8.ipynb  p9.ipynb  pyproject.toml  sport.csv  temp.ipynb  weather.csv
(+81 files in other folders)
