[project]
name = "ml"
version = "0.1.0"
requires-python = ">=3.10,<3.12"
dependencies = [
    "graphviz>=0.20.3",
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.1",
    "mlxtend>=0.23.4",
    "numpy<2",
    "pandas>=2.2.3",
    "pgmpy>=0.1.26",
    "pydot>=3.0.4",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "tensorflow>=2.14.0",
]
